--- a/scratch.html
+++ b/scratch.html
@@ -13,7 +13,7 @@
     </div>
     <div>
         <nav class = "nav" >
-            <a href="../index.html">Main</a>
+            <a href="index.html">Main</a>
             <a href="game.html">AI Web Game</a>
         </nav>
     </div>
